little modification on serialization