@@ -7,18 +7,18 @@ import java.util.List;
 public class UtilitiesDemo {
     public static void main(String[] args) {
         //
-        List<Integer> asList = Arrays.asList(1, 2, 3);
-        List<Integer> integerList = List.of(1, 2, 3);
-        List<int[]> ints = List.of(new int[]{1, 2, 3});
-        //
-        Integer max = Collections.max(integerList);
-        System.out.println("max = " + max);
-        //
-//        asList.add(10); // operation allowed
+        List<Integer> asList = Arrays.asList(1, 2, 3); // returns mutable list, allows null elements, can have null
+        List<Integer> listOf = List.of(1, 2, 3); // returns immutable list, null not allowed
+                
+        // both list does not allow structural immutability
+        asList.set(1, 10); // operation not allowed
         System.out.println("asList = " + asList);
 
-        integerList.add(10); // operation not allowed
-        System.out.println("integerList = " + integerList);
-
+        //
+        listOf.set(1, 10); // operation allowed
+        System.out.println("listOf = " + listOf);
+        //
+        Integer max = Collections.max(listOf);
+        System.out.println("max = " + max);
     }
 }
